--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bootstrap": "^5.3.2",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
